# ppap-cli

./: .env.example  .tagpr  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  tagpr.yml
src/: config.rs  main.rs  smtp.rs  zip.rs
src/email/: config.rs  mod.rs  sender.rs  sendgrid.rs
