[package]
name = "ppap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
clap = {version = "4.5.20", features = ["derive"]}
dotenv = "0.15.0"
lettre = "0.11.10"
once_cell = "1.20.2"
reqwest = {version = "0.12.9", features = ["json"]}
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
serial_test = "3.1.1"
tokio = {version = "1.41.0", features = ["full", "macros"]}
zip = "2.2.0"
